# lagoon

./: .amazeeio.secrets.yaml  .amazeeio.yml  .babelrc  .dockerignore  .env.defaults  .eslintignore  .eslintrc  .eslintrc.js  .flowconfig  .gitbook.yaml  .gitbook.yml  .gitignore  .gitmodules  .golangci.yaml  .lagoon.harbor-secrets.yaml  .lagoon.keycloak-secrets.yaml  .lagoon.logs-db-secrets.yaml  .lagoon.secrets.yaml  .lagoon.yml  .loopback  .prettierignore  .tmuxinator.yml  .travis.yml  404.html  CNAME  CONTRIBUTING.md  DEPRECATIONS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.builder  Dockerfile.mariadb  Dockerfile.php  Jenkinsfile  Jenkinsfile.end2end  Jenkinsfile.testing-develop  Jenkinsfile.testing-master  Makefile  README.md  SECURITY.md  STANDALONE_SERVICES_PLAN.md  (+50 more)
.circleci/: config.yml
.circlecli/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml  dependency-review-config.yaml  release-drafter.yml
GPUCache/: data_1  index
_data/: defaults.yml
applications/: index.html
charts/: dbaas-operator.yaml  dbaas-providers.yaml  index.yaml  lagoon-logging-0.1.0.tgz  lagoon-logging-0.2.0.tgz  lagoon-logging-0.6.1.tgz  lagoon-logging-0.6.2.tgz  lagoon-logging-0.6.3.tgz  lagoon-logging.values.yaml  lagoon-logs-concentrator-0.2.0.tgz  lagoon-logs-concentrator-0.2.1.tgz  lagoon-remote-0.1.0.tgz  lagoon-remote-0.1.1.tgz  lagoon-remote-0.1.2.tgz  lagoon-remote-0.1.3.tgz
cli/: .babelrc.js  .eslintignore  (+10 more)
services/api/ocaml-impl/: Dockerfile  Makefile  README.md  api-next.install  api-next.opam
services/api/ocaml-impl/src/: .merlin  jbuild  main.ml
(+5928 files in other folders)
