opam-version: "2.0"
name: "api"
version: "0.1.0"
maintainer: "Patrick Stapfer <patrick.stapfer@amazee.com>"
authors: ["Patrick Stapfer <patrick.stapfer@amazee.com>"]
homepage: "https://github.com/amazeeio/lagoon"
bug-reports: "https://github.com/amazeeio/lagoon"
dev-repo: "git+https://github.com/amazeeio/lagoon"
license: ["ALv2"]
build: [["jbuilder" "build" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "graphql-lwt"
  "alcotest" {test}
]
run-test: ["jbuilder" "runtest" "-p" name "-j" jobs]
